Getting ready for first publish

--- a/itch.io.html
+++ b/itch.io.html
@@ -1,5 +1,4 @@
-<h1 id="zed-text-editor">ZED Text Editor</h1>
-<p>A native text editor for the ZX Spectrum Next.</p>
+<h2>A native text editor for the ZX Spectrum Next.</h2>
 <hr>
 <h2 id="installing-the-editor">Installing the editor</h2>
 <p>The editor is a DOT command, the recommended installation method is to copy the ZED binary file to the DOT folder located in the root of your Next OS SD card.</p>
@@ -104,6 +103,5 @@
 </tr>
 </tbody>
 </table>
-
 <hr>
-<strong>Source Code : </strong><a href="https://github.com/taylorza/zed">Github</a>
+<p><strong>Source Code : </strong><a href="">Github</a></p>
