Support any line ending CR, LF or CRLF

--- a/itch.io.html
+++ b/itch.io.html
@@ -104,4 +104,4 @@
 </tbody>
 </table>
 <hr>
-<p><strong>Source Code : </strong><a href="">Github</a></p>
+<p><strong>Source Code : </strong><a href="https://github.com/taylorza/zed">Github</a></p>
